Fcabezasr - Project Finish Production
Project Finish Production

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,7 +14,7 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "localhost",
+    "host": "local",
     "user": "@retailcs.com",
     "password": "",
     "port": "21",
